--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Fasyl_frontend": {
+    "mada_garage_car": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/fasyl-frontend",
+            "outputPath": "dist/mada-garage-car",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -36,8 +36,8 @@
               "src/assets/plugins/bootstrap/bootstrap.min.css",
               "src/assets/assets/css/style.css",
               "src/assets/assets/css/bootstrap.min.css",
-              "src/lib/animate/animate.min.css",
-              "lib/owlcarousel/assets/owl.carousel.min.css"
+              "src/app/lib/animate/animate.min.css",
+              "src/app/lib/owlcarousel/assets/owl.carousel.min.css"
             ],
             "scripts": [
               "src/assets/plugins/jquery/jquery.min.js",
@@ -79,10 +79,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "Fasyl_frontend:build:production"
+              "buildTarget": "mada_garage_car:build:production"
             },
             "development": {
-              "buildTarget": "Fasyl_frontend:build:development"
+              "buildTarget": "mada_garage_car:build:development"
             }
           },
           "defaultConfiguration": "development"
